--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,8 @@
 
+services:
+  - type: web
+    name: youtube-api
+    env: python
+    plan: free
+    buildCommand: ""
+    startCommand: python app.py
